Responsividade simplespara celular

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-   <audio id="bossmusic" src="sound/boss_music.ogg" autostart="false"></audio>
-   <audio id="gameover" src="sound/gameover.ogg" autostart="false"></audio>
-   <audio id="finalbossmusic" src="sound/finalbossmusic.ogg" autostart="false"></audio>
-   <audio id="victorymusic" src="sound/victorymusic.ogg" autostart="false"></audio>
+   <audio id="bossmusic" src="sound/boss_music.mp3" autostart="false"></audio>
+   <audio id="gameover" src="sound/gameover.mp3" autostart="false"></audio>
+   <audio id="finalbossmusic" src="sound/finalbossmusic.mp3" autostart="false"></audio>
+   <audio id="victorymusic" src="sound/victorymusic.mp3" autostart="false"></audio>
    <div id="climax"></div>
    <div id="littleclimax"></div>
    <div id="mainContainer" class="container">
@@ -37,7 +37,7 @@
       <div class="victory display-none">
          <h1>Você mostrou o seu lado verdadeiro estilo ninja, parabéns!</h1>
          <small style="margin-top:15px;">Feito por Vitor Takara</small>
-         <a href="https://github.com/VitorTakara/NarutoClickGame"><img style="width: 30px;background: white;border-radius: 50%;" src="./img/github.svg"></a>
+         <a target="_blank" href="https://github.com/VitorTakara/NarutoClickGame"><img style="width: 30px;background: white;border-radius: 50%;" src="./img/github.svg"></a>
       </div>
       <div class="game display-none">
          <div class="container-info">
